remove stupid names and intro

--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@ entries_layout: list -->
 ---
 
 
-<h1 style="font-family:times, SimSun, STSong"> <span itemprop="givenName">Rongya</span> <span itemprop="familyName">Luo</span> | <ruby><rb>罗</rb><rp>(</rp><rt>luó</rt><rp>)</rp></ruby>
-    <ruby><rb>荣亚</rb><rp>(</rp><rt>róngyà</rt><rp>)</rp></ruby></h1>
+<h1 style="font-family:times, SimSun, STSong"> <span itemprop="givenName">Rongya</span> <span itemprop="familyName">Luo</span></h1>
 
-<p>目前在中国证监会博士后工作站，做智能金融、监管科技与市场运行方向相关研究。</p>
-
-<p>2018年博士毕业于北京大学信息科学技术学院，博士导师为李正斌教授，合作导师为彭超副教授。
-2013年本科毕业于北京理工大学光电学院，获工学学士学位，同时于人文与社会科学学院获经济学（双学位）学士学位。</p>
+<p>luorongya (a) gmail</p>
